<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.eslamelhoseiny.bookstore.activities.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_logo_login" />

    <EditText
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:id="@+id/et_email"/>

    <EditText
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/et_password"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="24dp"
        style="@style/ButtonStyle"
        android:text="@string/login"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_marginTop="16dp"
        style="@style/ButtonStyle"
        android:text="@string/register"/>

    <TextView
        android:clickable="true"
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/selector_text_view"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
